--- a/app/src/main/res/layout/itemlayout_subcate.xml
+++ b/app/src/main/res/layout/itemlayout_subcate.xml
@@ -14,26 +14,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center"
-        android:padding="12dp">
+        android:gravity="center">
 
 
-        <ImageView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/icon"
             android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:src="@drawable/ic_presentation"
-            android:tint="@color/colorPrimaryDark"
+            android:layout_height="0dp"
+            android:background="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="parent" />
+            android:text="01"
+            android:gravity="center"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+            android:textColor="@android:color/white"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/text"
             android:layout_width="0dp"
+            android:padding="16dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:text="Text"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -46,6 +47,8 @@
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
             android:tint="@color/colorPrimaryDark"
             app:layout_constraintBottom_toBottomOf="parent"
