--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#355B8C</color>
-    <color name="colorPrimaryDark">#2B4A70</color>
+    <color name="colorPrimary">#007fed</color>
+    <color name="colorPrimaryDark">#0058a5</color>
     <color name="colorAccent">#3BC7C4</color>
 
 
