--- a/app/src/main/res/layout/fragment_testimonial.xml
+++ b/app/src/main/res/layout/fragment_testimonial.xml
@@ -6,9 +6,10 @@
     tools:context=".Fragment.Testimonial">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvVideo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Video" />
+        android:text="Student" />
 
 </FrameLayout>
