--- a/app/src/main/res/layout/rv_item.xml
+++ b/app/src/main/res/layout/rv_item.xml
@@ -20,10 +20,12 @@
 
         <ImageView
             android:id="@+id/icon"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/ic_presentation"
             android:tint="@color/colorPrimaryDark"
+            android:background="@drawable/circle_fill"
+            android:padding="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="parent" />
