--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,17 +12,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
+        android:background="@android:color/white"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="180dp"
+            android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleMarginBottom="20dp"
-            app:expandedTitleMarginEnd="64dp"
+            android:background="@android:color/white"
             app:expandedTitleMarginStart="15dp"
+            app:contentScrim="@android:color/white"
             app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
@@ -30,90 +30,45 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/spacing_xxlarge"
-                android:orientation="vertical"
-                android:padding="@dimen/spacing_mlarge"
+                android:layout_marginTop="70dp"
+                android:orientation="horizontal"
                 app:layout_collapseMode="parallax">
 
                 <TextView
                     android:id="@+id/title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Hey There"
+                    android:text="Testimonial Video "
+                    android:textSize="32dp"
+                    android:layout_gravity="center_vertical"
+                    android:paddingLeft="20dp"
+                    android:layout_weight="1"
                     android:textAppearance="@style/toolbartext"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_medium"
-                    android:text="Let's experience Paris together"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
-                    android:textColor="@android:color/white"
-                    android:visibility="gone"
-                    app:fontFamily="@font/roboto_bold" />
+                <ImageView
+                    android:id="@+id/icon"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:tint="@color/colorPrimary"
+                    android:src="@drawable/ic_student"/>
+
 
             </LinearLayout>
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="?actionBarSize"
                 android:gravity="bottom"
                 android:paddingRight="5dp"
+                android:background="@android:color/transparent"
                 app:contentInsetStartWithNavigation="0dp"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/search_bar"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/spacing_xxlarge"
-                android:layout_gravity="bottom"
-                android:layout_margin="@dimen/spacing_large"
-                android:theme="@style/ThemeOverlay.AppCompat.Light"
-                app:cardBackgroundColor="@android:color/white"
-                app:cardCornerRadius="3dp"
-                app:layout_collapseMode="pin"
-                app:cardElevation="3dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <View
-                        android:layout_width="@dimen/spacing_large"
-                        android:layout_height="0dp" />
-
-
-                    <EditText
-                        android:id="@+id/et_search"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="@android:color/transparent"
-                        android:hint="Search Locations"
-                        android:imeOptions="actionSearch"
-                        android:maxLines="1"
-                        android:singleLine="true">
-
-                        <requestFocus />
-
-                    </EditText>
-
-                    <ImageButton
-                        android:layout_width="@dimen/spacing_xxlarge"
-                        android:layout_height="@dimen/spacing_xxlarge"
-                        android:background="@android:color/transparent"
-                        android:clickable="true"
-                        android:tint="@color/grey_60"
-                        android:src="@drawable/ic_search" />
-
-
-                </LinearLayout>
-
-            </com.google.android.material.card.MaterialCardView>
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
@@ -124,17 +79,34 @@
         android:layout_height="match_parent"
         android:background="@android:color/white"
         android:clipToPadding="false"
-        android:padding="@dimen/spacing_mlarge"
         android:scrollbars="none"
         android:scrollingCache="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
     </androidx.core.widget.NestedScrollView>
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginEnd="18dp"
+        android:layout_marginRight="18dp"
+        android:layout_marginBottom="94dp"
+        android:layout_gravity="bottom|center_horizontal"
+        android:text="Raise Question"
+        app:icon="@drawable/ic_add_black_24dp"
+        android:textColor="@android:color/white"
+        app:iconTint="@android:color/white"
+        app:backgroundTint="@color/colorPrimary"
+        android:clickable="true"
+        android:src="@drawable/ic_add_black_24dp" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewpager"
-        android:padding="@dimen/spacing_mlarge"
+        android:paddingLeft="@dimen/spacing_mlarge"
+        android:paddingRight="@dimen/spacing_mlarge"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/bottom_navigation"
@@ -146,7 +118,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:background="#d7dbde"
-        app:itemIconTint="@color/colorPrimary"
         app:itemTextColor="@color/colorPrimary"
         app:menu="@menu/bottom_menu" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
