--- a/app/src/main/res/layout/fragment_student.xml
+++ b/app/src/main/res/layout/fragment_student.xml
@@ -13,19 +13,23 @@
         android:layout_height="match_parent"
         android:text="Student" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/floatingActionButton"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="80dp"
-        android:background="@color/colorPrimary"
+        android:layout_centerHorizontal="true"
+        android:layout_marginEnd="18dp"
+        android:layout_marginRight="18dp"
+        android:layout_marginBottom="94dp"
+        android:text="Raise Question"
+        app:icon="@drawable/ic_add_black_24dp"
+        android:textColor="@android:color/white"
+        app:iconTint="@android:color/white"
+        app:backgroundTint="@color/colorPrimary"
         android:clickable="true"
-        android:src="@drawable/ic_add_black_24dp"
-        android:layout_marginRight="16dp"
-        android:layout_alignParentRight="true" />
+        android:src="@drawable/ic_add_black_24dp" />
 
 
 </RelativeLayout>
