--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,7 +22,7 @@
         <item name="colorControlNormal">@color/blue_400</item>
     </style>
     <style name="toolbartext" parent="@style/Base.TextAppearance.AppCompat.Large">
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@android:color/black</item>
         <item name="android:textSize">24sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:fontFamily" tools:ignore="NewApi">@font/roboto_bold</item>
