Added navigation drawer

--- a/app/src/main/res/layout/activity_entrepreneur_subcategory.xml
+++ b/app/src/main/res/layout/activity_entrepreneur_subcategory.xml
@@ -23,7 +23,7 @@
             android:background="@android:color/white"
             app:expandedTitleMarginStart="15dp"
             app:contentScrim="@android:color/white"
-            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
+            app:collapsedTitleTextAppearance="@style/collapsingToolbarLayoutTitleColor"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <LinearLayout
