--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:fitsSystemWindows="true"
-    tools:context=".Acivity.StudentSubCategory">
+    tools:context=".MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/app_bar"
+        android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
         android:background="@android:color/white"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
         <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/toolbar_layout"
+            android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
@@ -25,12 +26,12 @@
             app:collapsedTitleTextAppearance="@style/collapsingToolbarLayoutTitleColor"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="90dp"
-                android:orientation="vertical"
-                android:paddingLeft="@dimen/spacing_mlarge"
+                android:layout_marginTop="70dp"
+                android:orientation="horizontal"
                 app:layout_collapseMode="parallax">
 
                 <TextView
@@ -40,49 +41,59 @@
                     android:text="Testimonial Video "
                     android:textSize="32dp"
                     android:layout_gravity="center_vertical"
+                    android:paddingLeft="20dp"
                     android:layout_weight="1"
                     android:textAppearance="@style/toolbartext"
                     android:textStyle="bold" />
 
-            </LinearLayout>
+                <ImageView
+                    android:id="@+id/icon"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:tint="@color/colorPrimary"
+                    android:src="@drawable/ic_student"/>
 
+
+            </LinearLayout>
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="?actionBarSize"
+                android:gravity="bottom"
+                android:paddingRight="5dp"
+                android:background="@android:color/transparent"
+                app:contentInsetStartWithNavigation="0dp"
                 app:layout_collapseMode="pin"
-                app:navigationIcon="@drawable/ic_left_arrow"
-                android:textAppearance="@style/toolbartext"
-                app:titleTextColor="@android:color/black"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/background_gradient" />
+
         </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvLearningSub"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
         android:clipToPadding="false"
-        android:padding="@dimen/spacing_mlarge"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        android:scrollbars="none"
+        android:scrollingCache="true"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+
+    </androidx.core.widget.NestedScrollView>
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/floatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginRight="18dp"
+        android:layout_marginBottom="80dp"
         android:layout_gravity="bottom|center_horizontal"
         android:text="Raise Question"
         app:icon="@drawable/ic_add_black_24dp"
@@ -91,6 +102,24 @@
         app:backgroundTint="@color/colorPrimary"
         android:clickable="true"
         android:src="@drawable/ic_add_black_24dp" />
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewpager"
+        android:paddingLeft="@dimen/spacing_mlarge"
+        android:paddingRight="@dimen/spacing_mlarge"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottom_navigation"
+        android:layout_alignParentTop="true"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="#d7dbde"
+        app:itemTextColor="@color/colorPrimary"
+        app:menu="@menu/bottom_menu" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
