--- a/app/src/main/res/layout/rv_item.xml
+++ b/app/src/main/res/layout/rv_item.xml
@@ -20,10 +20,10 @@
 
         <ImageView
             android:id="@+id/icon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:src="@drawable/ic_presentation"
-            android:tint="@color/colorPrimaryDark"
+            android:tint="@color/colorPrimary"
             android:background="@drawable/circle_fill"
             android:padding="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
