--- a/app/src/main/res/drawable-v24/ic_back.xml
+++ b/app/src/main/res/drawable-v24/ic_back.xml
@@ -1,4 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="476.213"
-    android:viewportWidth="476.213" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#000000" android:pathData="M476.213,223.107l-418.786,0l94.393,-94.394l-21.213,-21.213l-130.607,130.606l130.607,130.608l21.213,-21.214l-94.393,-94.393l418.786,0z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="32dp"
+    android:height="32dp"
+    android:viewportWidth="24.0"
+    android:viewportHeight="24.0">
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M20,11H7.83l5.59,-5.59L12,4l-8,8 8,8 1.41,-1.41L7.83,13H20v-2z"/>
 </vector>
