--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -8,6 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="32sp"
+        android:layout_marginLeft="8dp"
         android:padding="8dp"
         android:textColor="@android:color/black"
         android:fontFamily="@font/roboto_bold"/>
