--- a/app/src/main/res/layout/otplayout.xml
+++ b/app/src/main/res/layout/otplayout.xml
@@ -20,9 +20,11 @@
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:src="@drawable/img_code_verification" />
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:tint="@color/colorPrimary"
+                android:src="@drawable/ic_smartphone"
+                />
 
             <TextView
                 android:layout_width="280dp"
