--- a/app/src/main/res/layout/activity_upload_file.xml
+++ b/app/src/main/res/layout/activity_upload_file.xml
@@ -75,6 +75,7 @@
                 android:orientation="vertical">
 
                 <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/btnAttach"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:cardCornerRadius="12dp"
@@ -100,9 +101,9 @@
                 </com.google.android.material.card.MaterialCardView>
 
                 <TextView
+                    android:id="@+id/filePath"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="file//user/0/......"
                     android:gravity="center"
                     android:layout_marginTop="8dp"
                     android:textSize="16sp"
