--- a/app/src/main/res/layout/fragment_recent_questions.xml
+++ b/app/src/main/res/layout/fragment_recent_questions.xml
@@ -6,9 +6,12 @@
     tools:context=".Fragment.Admin.RecentQuestionsFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvRecentQuestions"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:background="@android:color/white"
+        android:clipToPadding="false"
+        android:padding="@dimen/spacing_mlarge" />
 
 </FrameLayout>
