Done with file upload ,Testimonial video upload and Recent Questions list for both userType

--- a/app/src/main/res/layout/activity_admin_dash.xml
+++ b/app/src/main/res/layout/activity_admin_dash.xml
@@ -20,6 +20,7 @@
             android:textSize="32dp"
             android:text="Admin"/>
         <TextView
+            android:id="@+id/logout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/toolbartext"
