--- a/app/src/main/res/layout/dialog_answer.xml
+++ b/app/src/main/res/layout/dialog_answer.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
@@ -115,6 +114,8 @@
                 android:fontFamily="@font/roboto_regular"
                 android:text="How to concentrate while teacher is teaching ?"
                 android:textColor="@color/grey_80"
+                android:autoLink="web"
+                android:textColorLink="@color/colorPrimary"
                 android:textSize="18dp" />
 
 
