--- a/app/src/main/res/layout/progress.xml
+++ b/app/src/main/res/layout/progress.xml
@@ -4,7 +4,7 @@
     android:layout_width="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="25dp"
-    app:cardElevation="16dp"
+    app:cardBackgroundColor="@android:color/white"
     android:layout_height="wrap_content">
 
     <ProgressBar
