--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -7,7 +7,7 @@
     <item
         android:id="@+id/history"
         android:icon="@drawable/ic_history"
-        android:title="History" />
+        android:title="My Questions" />
     <item
         android:id="@+id/download"
         android:icon="@drawable/ic_download"
